--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@babel/register": "^7.28.3",
     "@cucumber/cucumber": "^12.2.0",
     "@playwright/test": "^1.56.1",
     "@size-limit/preset-small-lib": "^11.0.0",
@@ -69,6 +70,7 @@
     "esbuild": "^0.19.0",
     "eslint": "^8.55.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.0.1",
     "prettier": "^3.1.0",
     "size-limit": "^11.0.0",
