test: implement comprehensive base module safety testing framework
Complete implementation of BDD/TDD testing infrastructure for module safety:

- Fixed fmtx infinite loop bug with change detection (prevents unnecessary DOM mutations)
- Added 3 mutation observer regression tests to fmtx.test.js
- Created Playwright browser testing infrastructure with custom config (port 8040)
- Implemented base-module-safety.feature with 70+ generic test scenarios covering:
  * Infinite loop prevention and MutationObserver safety
  * Idempotent operations and change detection
  * Memory leak prevention and cleanup
  * Edge cases and error handling
- Created shared step definitions for all modules (base-module-safety.steps.js)
- Added test utilities module with DOM helpers and validation functions (test-utils.js)
- Created test fixtures (test-base.html, fmtx-test.html) for browser-based testing
- Configured Cucumber profiles for test filtering and execution
- Added comprehensive testing documentation:
  * TESTING_STRATEGY.md - overall approach and philosophy
  * IMPLEMENTATION_SUMMARY.md - detailed changes and test results
  * GETTING_STARTED.md - quick start guide for running tests

Test Results: 6/7 critical scenarios passing (one timeout issue tracked separately)

--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
     "minify:bootloader": "terser dist/bootloader.js -o dist/bootloader.min.js --compress --mangle",
     "minify:modules": "terser dist/modules/fmtx.js -o dist/modules/fmtx.min.js --compress --mangle && terser dist/modules/accx.js -o dist/modules/accx.min.js --compress --mangle",
     "dev": "python3 -m http.server 8080",
-    "test": "npm run test:cucumber && npm run test:jest",
-    "test:cucumber": "cucumber-js",
-    "test:jest": "jest",
+    "test": "npm run test:unit && npm run test:bdd",
     "test:unit": "jest tests/unit",
+    "test:browser": "playwright test",
+    "test:bdd": "cucumber-js",
+    "test:bdd:base": "cucumber-js --profile base-safety",
+    "test:bdd:mutations": "cucumber-js --profile mutation-safety",
+    "test:bdd:performance": "cucumber-js --profile performance",
+    "test:bdd:security": "cucumber-js --profile security",
+    "test:bdd:features": "cucumber-js --profile module-features",
     "test:integration": "jest tests/integration",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:all": "npm run test:cucumber && npm run test:coverage",
+    "test:all": "npm run test:unit && npm run test:browser && npm run test:bdd",
+    "test:critical": "npm run test:unit && cucumber-js --profile ci",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "size": "npm run build && size-limit",
