--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "size": "npm run build && size-limit",
-    "prepare": "npm run build"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -75,6 +75,7 @@
     "babel-jest": "^30.2.0",
     "esbuild": "^0.19.0",
     "eslint": "^8.55.0",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.0.1",
