--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@playwright/test": "^1.56.1",
     "@size-limit/preset-small-lib": "^11.0.0",
     "babel-jest": "^30.2.0",
+    "chai": "^6.2.0",
     "esbuild": "^0.19.0",
     "eslint": "^8.55.0",
     "husky": "^9.1.7",
