chore: remove workflow files to avoid scope requirement

--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "minify:modules": "terser dist/modules/fmtx.js -o dist/modules/fmtx.min.js --compress --mangle && terser dist/modules/accx.js -o dist/modules/accx.min.js --compress --mangle",
     "dev": "python3 -m http.server 8080",
     "test": "npm run test:unit && npm run test:bdd",
-    "test:unit": "jest tests/unit",
-    "test:browser": "playwright test",
-    "test:bdd": "cucumber-js",
-    "test:bdd:base": "cucumber-js --profile base-safety",
-    "test:bdd:mutations": "cucumber-js --profile mutation-safety",
-    "test:bdd:performance": "cucumber-js --profile performance",
-    "test:bdd:security": "cucumber-js --profile security",
-    "test:bdd:features": "cucumber-js --profile module-features",
-    "test:integration": "jest tests/integration",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:unit": "jest --config config/jest.config.js tests/unit",
+    "test:browser": "playwright test --config config/playwright.config.js",
+    "test:bdd": "cucumber-js --config config/cucumber.js",
+    "test:bdd:base": "cucumber-js --config config/cucumber.js --profile base-safety",
+    "test:bdd:mutations": "cucumber-js --config config/cucumber.js --profile mutation-safety",
+    "test:bdd:performance": "cucumber-js --config config/cucumber.js --profile performance",
+    "test:bdd:security": "cucumber-js --config config/cucumber.js --profile security",
+    "test:bdd:features": "cucumber-js --config config/cucumber.js --profile module-features",
+    "test:integration": "jest --config config/jest.config.js tests/integration",
+    "test:watch": "jest --config config/jest.config.js --watch",
+    "test:coverage": "jest --config config/jest.config.js --coverage",
     "test:all": "npm run test:unit && npm run test:browser && npm run test:bdd",
-    "test:critical": "npm run test:unit && cucumber-js --profile ci",
-    "lint": "eslint src/**/*.js",
-    "format": "prettier --write src/**/*.js",
+    "test:critical": "npm run test:unit && cucumber-js --config config/cucumber.js --profile ci",
+    "lint": "eslint --config config/.eslintrc.json src/**/*.js",
+    "format": "prettier --config config/.prettierrc --write src/**/*.js",
     "size": "npm run build && size-limit",
     "prepare": "husky"
   },
@@ -80,6 +80,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.0.1",
+    "markdownlint-cli": "^0.45.0",
     "prettier": "^3.1.0",
     "size-limit": "^11.0.0",
     "terser": "^5.26.0"
