fix: clean up logging, fix dragX axis constraints, improve demo UX
- Remove debug console.log statements from dragx.js, smartx.js, tablex.js, bindx.js
- Remove demo page logging (DOMContentLoaded, drop events, accX audit)
- Fix dragX axis constraint - now properly constrains horizontal/vertical movement
- Fix navX breadcrumb styling - displays inline instead of numbered list
- Add nx-sticky to main module navigation in demo
- Darken inactive tab backgrounds for better visibility
- Update tableX demo headings (Table-Level vs Column-Level Sorting)
- Update README: "Tailwind of Frontend Behavior" positioning, 5-column TOC

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "homepage": "https://genx.software",
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/register": "^7.28.3",
