feat: add content-hash cache busting and fix SmartX handler
- Add scripts/build-hashed.js for filename-based cache busting
- Update package.json with build:hash step in build pipeline
- Fix currency handler to call SmartX.format() directly for smart type
- Update genx-demo.html with hashed module/parser paths
- Simplify pre-commit hook (cache purging no longer needed)
- Add manifest.json and hashed parser files

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "npm run build:bootloader && npm run build:modules && npm run minify && npm run gzip",
+    "build": "npm run build:bootloader && npm run build:modules && npm run minify && npm run gzip && npm run build:hash",
+    "build:hash": "node scripts/build-hashed.js",
     "build:bootloader": "esbuild src/bootloader.js --bundle --outfile=dist/bootloader.js --format=iife --global-name=genx",
     "build:modules": "esbuild src/fmtx.js src/accx.js src/bindx.js src/dragx.js src/loadx.js src/navx.js src/tablex.js src/smartx.js --outdir=dist/modules --format=iife",
     "minify": "npm run minify:bootloader && npm run minify:modules",
